<resources>
    <string name="app_name">简信</string>
    <string name="title_home">个人中心</string>
    <string name="title_friendlist">通讯录</string>
    <string name="title_message">消息</string>
    <string name="btn_send">发送</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">查找</string>
    <string name="login">登 录</string>
    <string name="goto_register">没有账号? 去注册</string>
    <string name="head">头像</string>
    <string name="register">立即注册</string>
    <string name="signout">注销登录</string>
    <string name="reset_form">重置</string>
</resources>
