<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_message">
<!--默认显示菜单app:startDestination-->
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.simplechat.mainui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_friendlist"
        android:name="com.simplechat.mainui.friendlist.FriendListFragment"
        android:label="@string/title_friendlist"
        tools:layout="@layout/fragment_friendlist" />

    <fragment
        android:id="@+id/navigation_message"
        android:name="com.simplechat.mainui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />
</navigation>
