<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbf0"
    android:orientation="vertical"
    tools:context=".mainui.MainUiActivity">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="149dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp">

        <ImageView
            android:id="@+id/lg_userIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="250dp"
            android:layout_marginTop="25dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/head" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#07a6e6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_username" />
                />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入账号"

                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#d9d9d9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_lock"
                 />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

    </LinearLayout>

    <Button
        android:id="@+id/bn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:textColor="@color/colorPureWhite"
        android:background="@color/colorPrimary"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bn_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:paddingLeft="12dp"
        android:layout_gravity="right"
        android:layout_marginEnd="42dp"
        android:text="@string/goto_register"
        android:textColor="#ff4777"
        android:textSize="13sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
